--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -27,17 +27,14 @@
                                     </div>
                                     <button id="export-taxasite-map"
                                             class="btn btn-default pull-right">
-                                        <i
-                                                class="fa fa-download"></i>
+                                        <i class="fa fa-download"></i>
                                     </button>
                                 </div>
-
                                 <div class="card-body locationsite-map-wrapper">
                                     <div id="taxasite-map"
                                          class="map"
                                          style="height: 300px; width: 100%;">
                                     </div>
-
                                 </div>
                             </div>
                         </div>
@@ -290,7 +287,7 @@
         <div class="container dashboard-wrapper row">
             <div class="col-lg-4">
                 {# Filter History #}
-                <div class="card" id="filter-history-wrapper">
+                <div class="card filter-history" id="filter-history-wrapper">
                     <div class="card-header">
                         <div class="card-header-title pull-left d-inline"
                              style="height: 35px !important;">
@@ -298,11 +295,11 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <div class="col-12" id="filter-history-table"></div>
+                        <div class="col-12 content-body" id="filter-history-table"></div>
                     </div>
                 </div>
                 {# Distribution #}
-                <div class="card" id="species-ssdd-distribution">
+                <div class="card distribution-map" id="species-ssdd-distribution">
                     <div class="card-header">
                         <div class="card-header-title pull-left d-inline">
                             Distribution
@@ -317,12 +314,12 @@
                     <div class="card-body">
                         <div id="locationsite-map"
                              class="locationsite-map-wrapper"
-                             style="height: 300px; width: 100%;">
+                             style="width: 100%;">
                         </div>
                     </div>
                 </div>
                 {# Overview #}
-                <div class="card" id="species-ssdd-overview">
+                <div class="card overview" id="species-ssdd-overview">
                     <div class="card-header">
                         <div class="card-header-title pull-left d-inline">
                             Overview
@@ -334,7 +331,7 @@
                     </div>
                     {# Overview Site details #}
                     <div class="card-body" id="ssdd-overview-wrapper">
-                        <div id="species-ssdd-site-details">
+                        <div class="content-body" id="species-ssdd-site-details">
                             <div class="col-12 sub-title site-details-header">
                                 Site Details
                             </div>
@@ -365,7 +362,7 @@
                             <div class="col-12 sub-title site-details-header">
                                 Species and Occurences
                             </div>
-                            <div class="col-12" id="records-sites">
+                            <div class="col-12 records-overview" id="records-sites">
                             </div>
                         </div>
                         <div class="occurrences-table-view">
@@ -496,7 +493,7 @@
                 </div>
 
                 {# Data Summary #}
-                <div class="card" id="species-ssdd-data-summary">
+                <div class="card occurrence-charts" id="species-ssdd-data-summary">
                     <div class="card-header">
                         <div class="card-header-title pull-left d-inline">
                             Occurrence Charts
@@ -525,7 +522,7 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <div id="data-summary">
+                        <div id="data-summary" class="content-body">
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-2 ssdd-titles">
@@ -547,19 +544,19 @@
                             </div>
                             <div class="row">
                                 <div class="col-1"></div>
-                                <div class="col-2 col-chart">
+                                <div class="col-2 col-chart occurrence-origin-chart">
                                     <canvas id="species-ssdd-origin-pie"></canvas>
                                 </div>
-                                <div class="col-2 col-chart">
+                                <div class="col-2 col-chart occurrence-endemism-chart">
                                     <canvas id="species-ssdd-endemism-pie"></canvas>
                                 </div>
-                                <div class="col-2 col-chart">
+                                <div class="col-2 col-chart occurrence-conservation-status-chart">
                                     <canvas id="species-ssdd-conservation-status-pie"></canvas>
                                 </div>
-                                <div class="col-2 col-chart">
+                                <div class="col-2 col-chart occurrence-sampling-method-chart">
                                     <canvas id="species-ssdd-sampling-method-pie"></canvas>
                                 </div>
-                                <div class="col-2 col-chart">
+                                <div class="col-2 col-chart occurrence-biotope-chart">
                                     <canvas id="species-ssdd-biotope-pie"></canvas>
                                 </div>
                                 <div class="col-1 col-chart"></div>
@@ -583,7 +580,7 @@
                 </div>
 
                 {# Occurrences per year line chart #}
-                <div class="card" id="species-ssdd-occurrences-line-chart">
+                <div class="card occurrences" id="species-ssdd-occurrences-line-chart">
                     <div class="card-header">
                         <div class="card-header-title pull-left d-inline">
                             Occurrences
@@ -598,7 +595,7 @@
                     </div>
                     <div class="card-body">
                         <div class="col-12 species-ssdd-occurrences-line-chart">
-                            <canvas id="species-ssdd-occurrences-line-chart-canvas"></canvas>
+                            <canvas class="content-body" id="species-ssdd-occurrences-line-chart-canvas"></canvas>
                         </div>
                     </div>
                 </div>
