--- a/bims/static/css/detailed_dashboard.css
+++ b/bims/static/css/detailed_dashboard.css
@@ -345,3 +345,11 @@ table#filter-history-table {
     padding-left: 5px !important;
     padding-right: 5px !important;
 }
+
+.card-100 {
+    height: 100%;
+}
+
+.card-body {
+    overflow-y: auto;
+}
