--- a/bims/templates/harvest_collection.html
+++ b/bims/templates/harvest_collection.html
@@ -35,7 +35,7 @@
                 <div class="help-block">
                     <div class="help-block-space"></div>
 
-                    {% if not upload_sessions %}
+                    {% if not upload_session %}
                     <div class="help-block-space"></div>
                     <div class="help-block">
                         Note : Duplicates will be detected and update the existing data
@@ -116,22 +116,19 @@
             </form>
 
             {# Upload sessions #}
-            {% if upload_sessions %}
+            {% if upload_session %}
                 <div class="upload-progress-container">
-                    <h5>Current progress : </h5>
-                    {% for upload_session in upload_sessions %}
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Module group {{ upload_session.module_group.name }}</h5> <div style="float: right; margin-top: -40px"> <img src="{{ upload_session.module_group.logo.url }}" width="40"/> </div>
-                                <p>Start time {{ upload_session.start_time }}</p>
-                                <p class="card-text">Status : <span class="progress-text">{% if upload_session.status %}{{ upload_session.status }}{% else %}Processing{% endif %}</span></p>
-                                <div class="log">
-                                    <textarea id="log-container" rows="10" style="width: 100%">{{ upload_session.log | safe }}
-                                    </textarea>
-                                <div>
-                            </div>
+                    <h5>Current process : </h5>
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Module group {{ upload_session.module_group.name }}</h5> <div style="float: right; margin-top: -40px"> <img src="{{ upload_session.module_group.logo.url }}" width="40"/> </div>
+                            <p>Start time {{ upload_session.start_time }}</p>
+                            <p class="card-text">Status : <span class="progress-text">{% if upload_session.status %}{{ upload_session.status }}{% else %}Processing{% endif %}</span></p>
+                            <div class="log">
+                                <textarea id="log-container" rows="10" style="width: 100%">{{ upload_session.log | safe }}</textarea>
+                            <div>
                         </div>
-                    {% endfor %}
+                    </div>
                 </div>
             {% endif %}
 
@@ -142,15 +139,9 @@
                     {% for upload_session in finished_sessions %}
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">CSV file {{ upload_session.process_file.name }}</h5> <div style="float: right; margin-top: -40px"> <img src="{{ upload_session.module_group.logo.url }}" width="40"/> </div>
-                                <p>Uploaded at {{ upload_session.uploaded_at }}</p>
-                                <p class="card-text">Result : {% if upload_session.progress %}{{ upload_session.progress }}{% else %}Processing{% endif %}</p>
-                                {% if upload_session.error_file %}
-                                    <a href="{{ upload_session.error_file.url }}" target="_blank" class="btn btn-danger">Error File</a>
-                                {% endif %}
-                                {% if upload_session.success_file %}
-                                    <a href="{{ upload_session.success_file.url }}" target="_blank" class="btn btn-success">Success File</a>
-                                {% endif %}
+                                <h5 class="card-title"><a href="{{ upload_session.log_file.url }}" class="btn btn-warning">Download logs</a></h5> <div style="float: right; margin-top: -40px"> <img src="{{ upload_session.module_group.logo.url }}" width="40"/> </div>
+                                <p>Started at {{ upload_session.start_time }}</p>
+                                <p class="card-text">Result : {% if upload_session.status %}{{ upload_session.status }}{% else %}Processing{% endif %}</p>
                             </div>
                         </div>
                     {% endfor %}
@@ -171,20 +162,21 @@
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
     <script type="text/javascript">
 
-        const updateUrl = "/api/upload-status/";
+        const updateUrl = "/api/harvest-status/";
+        const harvestSessionInProgress = {% if upload_session %}true{% else %}false{% endif %};
+        const harvestSessionId = {% if upload_session %}{{ upload_session.id }}{% else %}0{% endif %};
 
         const updateProgress = (id, $elm) => {
             setTimeout(function () {
-                console.log(updateUrl);
                 $.get(updateUrl + id).then(
                     (response) => {
-                        if (!response['processed']) {
-                            let currentProgress = response['progress'];
-                            $elm.parent().parent().find('.progress-text').html(currentProgress);
-                            if (currentProgress && currentProgress.indexOf('/') > -1) {
-                                let [indexProgress, totalProgress] = currentProgress.split('/');
-                                let percentProgress = (parseInt(indexProgress) / parseInt(totalProgress)) * 100;
-                                $elm.css({'width': `${percentProgress}%`});
+                        if (!response['finished']) {
+                            let currentProgress = response['status'];
+                            $elm.find('.progress-text').html(currentProgress);
+                            let logContainer = $('#log-container');
+                            logContainer.html(response['log'])
+                            if(logContainer.length) {
+                                logContainer.scrollTop(logContainer[0].scrollHeight - logContainer.height());
                             }
                             updateProgress(id, $elm);
                         } else {
@@ -196,18 +188,13 @@
         }
 
         $(function () {
-            let progressBar = $('.progress-bar');
-            $.each(progressBar, function (index, elm) {
-                let $elm = $(elm);
-                let currentProgress = $elm.data('progress');
-                let sessionId = $elm.data('id');
-                if (currentProgress && currentProgress.indexOf('/') > -1) {
-                    let [indexProgress, totalProgress] = currentProgress.split('/');
-                    let percentProgress = (parseInt(indexProgress) / parseInt(totalProgress)) * 100;
-                    $elm.css({'width': `${percentProgress}%`});
-                }
-                updateProgress(sessionId, $(elm));
-            });
+            let textarea = document.getElementById('log-container');
+            if (textarea) {
+                textarea.scrollTop = textarea.scrollHeight;
+            }
+            if (harvestSessionInProgress) {
+                updateProgress(harvestSessionId, $('.upload-progress-container'));
+            }
         });
 
     </script>
