--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -313,7 +313,7 @@
                     </div>
                     <div class="card-body">
                         <div id="locationsite-map"
-                             class="locationsite-map-wrapper"
+                             class="locationsite-map-wrapper content-body"
                              style="width: 100%;">
                         </div>
                     </div>
