Survey data container

--- a/bims/static/css/detailed_dashboard.css
+++ b/bims/static/css/detailed_dashboard.css
@@ -354,3 +354,7 @@ table#filter-history-table {
     overflow-y: auto;
     padding: 0 !important;
 }
+
+.card-padding {
+    padding: 20px !important;
+}
