--- a/bims/templates/dashboard_management.html
+++ b/bims/templates/dashboard_management.html
@@ -135,7 +135,8 @@
             'overview',
             'occurrences',
             'occurrence-charts',
-            'filter-history'
+            'filter-history',
+            'survey',
         ]
 
         const updateDashboard = (e) => {
