--- a/bims/templates/dashboard_management.html
+++ b/bims/templates/dashboard_management.html
@@ -137,6 +137,7 @@
             'occurrence-charts',
             'filter-history',
             'survey',
+            'metadata-table'
         ]
 
         const updateDashboard = (e) => {
