--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -708,7 +708,7 @@
             </div>
             <div class="col-lg-12">
                 {# Metadata table #}
-                <div class="card" id="ssdd-metadata-table">
+                <div class="card metadata-table" id="ssdd-metadata-table">
                     <div class="card-header">
                         <div class="card-header-title pull-left d-inline">
                             Metadata Table
@@ -718,8 +718,8 @@
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
-                    <div class="card-body">
-                        <table id="metadata-table-list" class="table table-hover custom-table metadata-table">
+                    <div class="card-body card-padding">
+                        <table class="table table-hover custom-table metadata-table content-body">
                         </table>
                     </div>
                 </div>
