Add more charts

--- a/bims/static/css/detailed_dashboard.css
+++ b/bims/static/css/detailed_dashboard.css
@@ -358,3 +358,8 @@ table#filter-history-table {
 .card-padding {
     padding: 20px !important;
 }
+
+.canvas-container {
+    height: 100%;
+    width: 100%;
+}
