--- a/bims/templates/dashboard_management.html
+++ b/bims/templates/dashboard_management.html
@@ -137,7 +137,11 @@
             'occurrence-charts',
             'filter-history',
             'survey',
-            'metadata-table'
+            'metadata-table',
+            'taxa-chart',
+            'conservation-status-chart',
+            'endemism-chart',
+            'origin-chart'
         ]
 
         const updateDashboard = (e) => {
