--- a/bims/templates/dashboard_management.html
+++ b/bims/templates/dashboard_management.html
@@ -141,7 +141,8 @@
             'taxa-chart',
             'conservation-status-chart',
             'endemism-chart',
-            'origin-chart'
+            'origin-chart',
+            'site-image'
         ]
 
         const updateDashboard = (e) => {
