--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -472,14 +472,14 @@
             <div class="col-lg-8">
 
                 {# Site image #}
-                <div class="card" id="ssdd-carousel-wrapper" style="display: none;">
+                <div class="card site-image" id="ssdd-carousel-wrapper" style="display: none;">
                     <div class="card-body">
-                        <div id="ssdd-site-image-carousel" class="carousel slide" data-ride="carousel">
+                        <div id="ssdd-site-image-carousel" class="carousel slide content-body canvas-container" data-ride="carousel">
                             <!-- Indicators -->
                             <ul class="carousel-indicators">
                             </ul>
                             <!-- The slideshow -->
-                            <div class="carousel-inner">
+                            <div class="carousel-inner" style="height: 100%; width: 100%">
                             </div>
                             <!-- Left and right controls -->
                             <a class="carousel-control-prev" href="#ssdd-site-image-carousel" data-slide="prev">
